<resources>
    <string name="app_name">NEUQuest</string>
    <string name="welcome_to_neuquest">Welcome to NEUQuest!</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="enter_name">Name</string>
    <string name="enter_email">Email ID</string>
    <string name="enter_password">Password</string>
    <string name="select_your_interests">Select your interests</string>
    <string name="save">Save</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="event_price">Price</string>
    <string name="event_location">Location</string>
    <string name="add">Add</string>
    <string name="event_register_link">Register Link</string>
    <string name="create_event">Create Event</string>
    <string name="event_description">Description</string>
    <string name="selected_image">Selected Image</string>
    <string name="select_image">Select Image</string>
    <string name="art">Art</string>
    <string name="nature">Nature</string>
    <string name="photography">Photography</string>
    <string name="travel">Travel</string>
    <string name="music">Music</string>
    <string name="movies">Movies</string>
    <string name="food">Food</string>
    <string name="sports">Sports</string>
    <string name="right_now">Right Now</string>
    <string name="explore">Explore</string>
    <string name="register_event">Register Event</string>
    <string name="item_image">Image</string>
    <string name="confirm_selection">Confirm Selection</string>
    <string name="register">Register</string>
    <string name="trip_budget">Trip Budget</string>
    <string name="minimumBudget">Minimum Budget</string>
    <string name="maximumBudget">Maximum Budget</string>
    <string name="budget_includes">Budget includes</string>
    <string name="meals">Meals</string>
    <string name="transport">Transport</string>
    <string name="submit">Submit</string>
    <string name="planned_trips">Planned Trips</string>
    <string name="show_location">Show Location</string>
    <string name="user_profile">User profile</string>
    <string name="title_home">Home</string>
    <string name="title_budget">Budget</string>
    <string name="title_profile">Profile</string>
    <string name="comments_section">Comments</string>
    <string name="add_comment">Add a comment...</string>
    <string name="post_comment">Post Comment</string>
    <string name="event_image">Event Image</string>
    <string name="report">Report</string>
    <string name="request_admin">Request Admin</string>
    <string name="already_reported">Already Reported</string>
    <string name="admin_console">Admin Console</string>
    <string name="remove_event">Remove Event</string>
    <string name="approve_event">Approve Event</string>
    <string-array name="campus_options">
        <item>Boston</item>
        <item>Silicon Valley</item>
    </string-array>
</resources>