<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:padding="24dp"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/textview_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/text_color"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/name_edittext"
        app:layout_constraintVertical_chainStyle="packed"/>

    <EditText
        android:id="@+id/name_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/white"
        android:hint="@string/enter_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_signup"
        app:layout_constraintBottom_toTopOf="@+id/campus_spinner"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,VisualLintTextFieldSize" />

    <Spinner
        android:id="@+id/campus_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/campus_options"
        android:padding="12dp"
        android:background="@color/white"
        android:textColor="@color/text_color"
        android:textColorHint="#757575"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_edittext"
        app:layout_constraintBottom_toTopOf="@+id/email_edittext"/>

    <EditText
        android:id="@+id/email_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@color/white"
        android:hint="@string/enter_email"
        android:textColor="@color/text_color"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/campus_spinner"
        app:layout_constraintBottom_toTopOf="@+id/password_edittext"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/password_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@color/white"
        android:hint="@string/enter_password"
        android:textColor="@color/text_color"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_edittext"
        app:layout_constraintBottom_toTopOf="@+id/signup_button"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/sign_up"
        style="@style/CustomButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_edittext"
        app:layout_constraintBottom_toTopOf="@id/adminRequest"
        tools:ignore="DuplicateSpeakableTextCheck,HardcodedText,TextContrastCheck,VisualLintButtonSize" />

    <CheckBox
        android:id="@+id/adminRequest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/request_admin"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_button"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>